--- a/lab/db.ipynb
+++ b/lab/db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,22 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<db.posts.Posts at 0x7fde60d3a5e0>"
+       "[<db.posts.PostComments at 0x7f03b55a2c40>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.read_post(2)"
+    "db.read_post(1).data.comments"
    ]
   },
   {
