use relationship instead of querying db again

--- a/lab/controller.ipynb
+++ b/lab/controller.ipynb
@@ -15,14 +15,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tIndex   Name                     Moderator      \n",
-      "\t1       NP_HW                    Bob            \n",
+      "\tID      Title                    Author         Date      \n",
+      "\t2       a b c                    Bob            04/19     \n",
       "\n"
      ]
     }
@@ -30,7 +32,7 @@
    "source": [
     "from bbs_controller import BBS_Controller\n",
     "controller = BBS_Controller()\n",
-    "print(controller.execute(b'list-board'))"
+    "print(controller.execute(b'list-post NP_HW'))"
    ]
   }
  ],
