--- a/lab/lab2_test.ipynb
+++ b/lab/lab2_test.ipynb
@@ -195,10 +195,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index     Name                     Moderator      \n",
-      "1         NP_HW                    Bob            \n",
-      "2         OS_HW                    Bob            \n",
-      "3         FF                       Bob            \n",
+      "\tIndex     Name                     Moderator      \n",
+      "\t1         NP_HW                    Bob            \n",
+      "\t2         OS_HW                    Bob            \n",
+      "\t3         FF                       Bob            \n",
       "\n"
      ]
     }
@@ -216,9 +216,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index     Name                     Moderator      \n",
-      "1         NP_HW                    Bob            \n",
-      "2         OS_HW                    Bob            \n",
+      "\tIndex     Name                     Moderator      \n",
+      "\t1         NP_HW                    Bob            \n",
+      "\t2         OS_HW                    Bob            \n",
       "\n"
      ]
     }
@@ -308,9 +308,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID        Title                    Author         Date      \n",
-      "1         About NP HW_2            Bob            04/19     \n",
-      "2         HW_3                     Bob            04/19     \n",
+      "\tID        Title                    Author         Date      \n",
+      "\t1         About NP HW_2            Bob            04/19     \n",
+      "\t2         HW_3                     Bob            04/19     \n",
       "\n"
      ]
     }
@@ -328,8 +328,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID        Title                    Author         Date      \n",
-      "1         About NP HW_2            Bob            04/19     \n",
+      "\tID        Title                    Author         Date      \n",
+      "\t1         About NP HW_2            Bob            04/19     \n",
       "\n"
      ]
     }
@@ -341,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -365,13 +367,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Author    : Bob\n",
-      "Title     : About NP HW_2\n",
-      "Date      : 2020-04-19\n",
-      "--\n",
-      "Help!\n",
-      "I have some problem!\n",
-      "--\n",
+      "\tAuthor    : Bob\n",
+      "\tTitle     : About NP HW_2\n",
+      "\tDate      : 2020-04-19\n",
+      "\t--\n",
+      "\tHelp!\n",
+      "\tI have some problem!\n",
+      "\t--\n",
       "\n"
      ]
     }
@@ -425,13 +427,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Author    : Bob\n",
-      "Title     : NP HW_2\n",
-      "Date      : 2020-04-19\n",
-      "--\n",
-      "Help!\n",
-      "I have some problem!\n",
-      "--\n",
+      "\tAuthor    : Bob\n",
+      "\tTitle     : NP HW_2\n",
+      "\tDate      : 2020-04-19\n",
+      "\t--\n",
+      "\tHelp!\n",
+      "\tI have some problem!\n",
+      "\t--\n",
       "\n"
      ]
     }
@@ -557,14 +559,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Author    : Bob\n",
-      "Title     : NP HW_2\n",
-      "Date      : 2020-04-19\n",
-      "--\n",
-      "Help!\n",
-      "I have some problem!\n",
-      "--\n",
-      "Sam: Ha! ha! ha!\n",
+      "\tAuthor    : Bob\n",
+      "\tTitle     : NP HW_2\n",
+      "\tDate      : 2020-04-19\n",
+      "\t--\n",
+      "\tHelp!\n",
+      "\tI have some problem!\n",
+      "\t--\n",
+      "\tSam: Ha! ha! ha!\n",
       "\n"
      ]
     }
@@ -600,11 +602,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index     Name                     Moderator      \n",
-      "1         NP_HW                    Bob            \n",
-      "2         OS_HW                    Bob            \n",
-      "3         FF                       Bob            \n",
-      "4         Hello                    Sam            \n",
+      "\tIndex     Name                     Moderator      \n",
+      "\t1         NP_HW                    Bob            \n",
+      "\t2         OS_HW                    Bob            \n",
+      "\t3         FF                       Bob            \n",
+      "\t4         Hello                    Sam            \n",
       "\n"
      ]
     }
