--- a/lab/clear_table.ipynb
+++ b/lab/clear_table.ipynb
@@ -22,20 +22,34 @@
     "from bbs_db import BBS_DB\n",
     "from db.base import Base\n",
     "\n",
-    "DB = BBS_DB(DB_HOST, DB_PORT, DB_USERNAME, DB_PWD)"
+    "DB = BBS_DB(DB_HOST, DB_PORT, DB_USERNAME, DB_PWD)\n",
+    "session = DB.scoped_session_factory()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "session.execute('SET FOREIGN_KEY_CHECKS = 0')\n",
+    "for table in Base.metadata.tables:\n",
+    "    session.execute(f'DROP TABLE {table};')\n",
+    "session.execute('SET FOREIGN_KEY_CHECKS = 1')\n",
+    "session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB.session.execute('SET FOREIGN_KEY_CHECKS = 0')\n",
-    "for table in Base.metadata.tables:\n",
-    "    DB.session.execute(f'DROP TABLE {table};')\n",
-    "DB.session.execute('SET FOREIGN_KEY_CHECKS = 1')\n",
-    "DB.session.commit()"
+    "from bbs_db_schema import SCHEMA_CREATOR\n",
+    "creator = SCHEMA_CREATOR(DB_HOST, DB_PORT, DB_USERNAME, DB_PWD)\n",
+    "creator.create_table()"
    ]
   }
  ],
