--- a/lab/db.ipynb
+++ b/lab/db.ipynb
@@ -9,11 +9,7 @@
     "import os,sys,inspect\n",
     "current_dir = os.path.dirname(os.path.abspath(inspect.getfile(inspect.currentframe())))\n",
     "parent_dir = os.path.dirname(current_dir)\n",
-    "sys.path.insert(0, parent_dir)\n",
-    "\n",
-    "from bbs_db import BBS_DB\n",
-    "from constant import DB_HOST, DB_PORT, DB_USERNAME, DB_PWD\n",
-    "db = BBS_DB(DB_HOST, DB_PORT, DB_USERNAME, DB_PWD)"
+    "sys.path.insert(0, parent_dir)"
    ]
   },
   {
@@ -22,28 +18,103 @@
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "from bbs_db_schema import SCHEMA_CREATOR\n",
+    "from constant import DB_HOST, DB_PORT, DB_USERNAME, DB_PWD\n",
+    "creator = SCHEMA_CREATOR(DB_HOST, DB_PORT, DB_USERNAME, DB_PWD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "creator.create_table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start magic\n",
+      "(<__main__.DB object at 0x7f2a739ce5e0>, 1, 2, 3)\n",
+      "hi in\n",
+      "1 2 3\n",
+      "hi out\n",
+      "end magic\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DB_BASE:\n",
+    "    def __init__(self):\n",
+    "        self.session = '1'\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def protector(func):\n",
+    "        def magic( *args):\n",
+    "            print(\"start magic\")\n",
+    "            print(args)\n",
+    "            func( *args)\n",
+    "            print(\"end magic\")\n",
+    "        return magic\n",
+    "\n",
+    "       \n",
+    "class DB(DB_BASE):\n",
+    "    @DB_BASE.protector\n",
+    "    def hi(self, a, b, c):\n",
+    "        print(\"hi in\")\n",
+    "        print(a, b, c)\n",
+    "        print(\"hi out\")\n",
+    "\n",
+    "\n",
+    "db = DB()\n",
+    "db.hi(1, 2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fin\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "[<db.posts.PostComments at 0x7f03b55a2c40>]"
+       "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.read_post(1).data.comments"
+    "def a(b):\n",
+    "    try:\n",
+    "        return b\n",
+    "    except:\n",
+    "        print(\"qq\")\n",
+    "    finally:\n",
+    "        print('fin')\n",
+    "        \n",
+    "        \n",
+    "c = a(1)\n",
+    "c"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
