--- a/lab/db.ipynb
+++ b/lab/db.ipynb
@@ -22,98 +22,83 @@
    "source": [
     "from bbs_db_schema import SCHEMA_CREATOR\n",
     "from constant import DB_HOST, DB_PORT, DB_USERNAME, DB_PWD\n",
-    "creator = SCHEMA_CREATOR(DB_HOST, DB_PORT, DB_USERNAME, DB_PWD)"
+    "creator = SCHEMA_CREATOR(DB_HOST, DB_PORT, DB_USERNAME, DB_PWD)\n",
+    "creator.create_table()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "creator.create_table()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start magic\n",
-      "(<__main__.DB object at 0x7f2a739ce5e0>, 1, 2, 3)\n",
-      "hi in\n",
-      "1 2 3\n",
-      "hi out\n",
-      "end magic\n"
-     ]
-    }
-   ],
-   "source": [
-    "class DB_BASE:\n",
-    "    def __init__(self):\n",
-    "        self.session = '1'\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def protector(func):\n",
-    "        def magic( *args):\n",
-    "            print(\"start magic\")\n",
-    "            print(args)\n",
-    "            func( *args)\n",
-    "            print(\"end magic\")\n",
-    "        return magic\n",
-    "\n",
-    "       \n",
-    "class DB(DB_BASE):\n",
-    "    @DB_BASE.protector\n",
-    "    def hi(self, a, b, c):\n",
-    "        print(\"hi in\")\n",
-    "        print(a, b, c)\n",
-    "        print(\"hi out\")\n",
-    "\n",
-    "\n",
-    "db = DB()\n",
-    "db.hi(1, 2, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fin\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "1"
+       "<sqlalchemy.orm.session.Session at 0x7f99fd634880>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def a(b):\n",
-    "    try:\n",
-    "        return b\n",
-    "    except:\n",
-    "        print(\"qq\")\n",
-    "    finally:\n",
-    "        print('fin')\n",
-    "        \n",
-    "        \n",
-    "c = a(1)\n",
-    "c"
+    "# from sqlalchemy import create_engine\n",
+    "# from sqlalchemy.orm import scoped_session, sessionmaker\n",
+    "\n",
+    "# engine = create_engine(f\"mysql://{DB_USERNAME}:{DB_PWD}@{DB_HOST}:{DB_PORT}/bbs\")\n",
+    "# session_factory = sessionmaker(bind=engine)\n",
+    "# scoped_session_factory = scoped_session(session_factory)\n",
+    "\n",
+    "# session = scoped_session_factory()\n",
+    "# session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 3,\n",
+       " 'username': 'z',\n",
+       " 'email': 'b',\n",
+       " 'password': 'z',\n",
+       " 'bucket_name': 'cc',\n",
+       " 'posts': [],\n",
+       " 'boards': [],\n",
+       " 'receive_mails': [],\n",
+       " 'send_mails': []}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from bbs_db import BBS_DB_API\n",
+    "from db.boards import *\n",
+    "from db.mails import *\n",
+    "from db.posts import *\n",
+    "from db.users import *\n",
+    "\n",
+    "db_api = BBS_DB_API(DB_HOST, DB_PORT, DB_USERNAME, DB_PWD)\n",
+    "\n",
+    "# Create\n",
+    "db_api.create(Users, {\n",
+    "    'username': 'z',\n",
+    "    'email': 'b',\n",
+    "    'password': 'z',\n",
+    "    'bucket_name': 'cc',\n",
+    "})\n",
+    "\n",
+    "# Read\n",
+    "\n"
    ]
   }
  ],
